# maya-usd

./: CMakeLists.txt
cmake/: compiler_config.cmake  mayausd_version.info  utils.cmake
cmake/modules/: FindAdskUsdAssetResolver.cmake  FindAdskUsdEditForward.cmake  FindMaya.cmake
doc/: CHANGELOG.md  build.md
lib/: CMakeLists.txt
lib/mayaUsd/: CMakeLists.txt
lib/mayaUsd/base/: CMakeLists.txt  MayaUsdEditForwardHost.cpp  MayaUsdEditForwardHost.h  tokens.h
lib/mayaUsd/commands/: layerEditorCommand.cpp
lib/mayaUsd/editForward/: MayaUsdEditForwardHost.cpp  MayaUsdEditForwardHost.h
lib/mayaUsd/nodes/: CMakeLists.txt  layerManager.cpp  proxyShapeBase.cpp  sceneRenderSettings.cpp  sceneRenderSettings.h  usdSceneSettingsManager.cpp  usdSceneSettingsManager.h  usdSettingsNode.cpp  usdSettingsNode.h
lib/mayaUsd/python/: CMakeLists.txt  module.cpp  wrapSceneRenderSettings.cpp
lib/mayaUsd/ufe/: CMakeLists.txt  GatewayHierarchy.cpp  GatewayHierarchy.h  GatewayHierarchyHandler.cpp  GatewayHierarchyHandler.h  Global.cpp  Global.h  MayaStagesSubject.cpp  MayaStagesSubject.h  MayaUsdContextOps.cpp  ProxyShapeHandler.cpp  UsdStageMap.cpp  Utils.cpp  Utils.h
lib/mayaUsd/utils/: plugInfo.json  utilFileSystem.cpp
lib/mayaUsdAPI/: CMakeLists.txt  sceneRenderSettings.cpp  sceneRenderSettings.h
lib/ufe/: __init__.py  wrapUtils.cpp
lib/usd/ui/: CMakeLists.txt
lib/usdUfe/ufe/: SetVariantSelectionCommand.cpp  UsdObject3d.cpp  UsdShaderAttributeDef.cpp  UsdShaderNodeDef.cpp  (+5 more)
test/lib/: CMakeLists.txt  testAdskAssetResolver.py  testAdskUsdComponentCreator.py  testAdskUsdEditForward.py  testComponentCreatorBase.py  testComponentCreatorDeleteInComponent.py  testComponentCreatorReparentInComponent.py  testComponentVariant.py  testMayaUsdLayerEditorCommands.py
test/testUtils/: fixturesUtils.py
(+68 files in other folders)
